# Second_lab_AP

./: CMakeLists.txt  README.md  file.txt  main.cpp
tests/: CMakeLists.txt  Tests.cpp  Tests.h
